tests/samples/invalid/mismatched_constant_array_length.pn
const MAX_LEN: usize = 3;

const X: [MAX_LEN]i32 = [1, 2];
const Y: [MAX_LEN]i32 = [1, 2, 3, 4];
